# minimind-orangepi

./: .gitignore  CMakeLists.txt  README.md  requirements-demo.txt
bench/: bench_decode.cpp  check_prefill_consistency.cpp
scripts/: build.sh  install_custom_ops.sh  set_env.sh  test_text_model.sh
src/csrc/include/minimind_orangepi/: acl_context.h  ops.h  tensor.h  tokenizer.h  weights.h
src/csrc/kernels/custom_ops/op_host/: minimind_ops.cpp
src/csrc/kernels/custom_ops/op_kernel/: CMakeLists.txt  mini_mind_add.cpp  mini_mind_attention.cpp  mini_mind_decode_attention.cpp  mini_mind_decode_qkv_postprocess.cpp  mini_mind_prefill_attention.cpp  mini_mind_qk_norm_rope.cpp  mini_mind_qkv_split_rows.cpp  mini_mind_rms_norm.cpp  mini_mind_rms_norm_rows.cpp  mini_mind_rope.cpp  mini_mind_swi_glu.cpp  mini_mind_swi_glu_rows.cpp
src/csrc/lib/: acl_context.cpp  ops.cpp  tensor.cpp  tokenizer.cpp  weights.cpp
src/csrc/models/minimind/: ascend_custom_ops.cpp  ascend_custom_ops.h  ascend_matmul.cpp  ascend_matmul.h  ascend_weights.h  config.cpp  config.h  decoder_layer.cpp  decoder_layer.h  language_model.cpp  language_model.h  rope.cpp  rope.h  runtime_loader.cpp  runtime_loader.h
src/csrc/models/minimind_o/: config.cpp  config.h  talker.cpp  talker.h  thinker.cpp  thinker.h
src/csrc/models/minimind_v/: config.cpp  config.h  projector.cpp  projector.h  vision_encoder.cpp  vision_encoder.h  vlm_model.cpp  vlm_model.h
src/csrc/tools/: minimind_generate.cpp
src/python/minimind_orangepi/: __init__.py  image_processing.py  omni_session.py  session.py
src/python/tools/: compare_text_logits.py  export_minimind_runtime.py  gradio_text_demo.py  inspect_minimind_checkpoint.py  run_text.py  run_vlm.py
tests/integration/: test_compare_text_logits.py  test_export_minimind_runtime.py  test_image_processing.py  test_inspect_minimind_checkpoint.py  test_omni_session.py  test_text_generate.py  test_text_session.py
tests/unit/: test_ascend_custom_ops.cpp  test_decoder_layer.cpp  test_language_model.cpp  test_minimind_config.cpp  test_minimind_o_config.cpp  test_minimind_v_config.cpp  test_moe_top1.cpp  test_ops.cpp  test_projector.cpp  test_rope.cpp  test_runtime_loader.cpp  test_smoke.cpp  test_tensor.cpp  test_tokenizer.cpp  test_vlm_model.cpp  test_weights.cpp
